--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,7 +3,20 @@
 @tailwind utilities;
 
 body {
-    font-family: sans-serif;
-    color: white;
-    background-image: url('/bg.jpg');
+  font-family: sans-serif;
+  color: white;
+  background-image: url("/bg.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.video-background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  object-fit: cover;
 }
